--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "./jest-setup.ts"
   ],
   "exclude": [
     "node_modules"
